2007-07-01  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs. TabItemTest.cs: Added or expanded some test.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItemTest.cs: Added a test.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added OnMouseLeftButtonDownInCanvas test.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs, TabItemTest: Added or expanded some tests.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added or expanded some tests.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItemTest.cs: Added or expanded some tests.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs, TabItemTest.cs: Added or expanded some tests.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added Style test.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added or expanded some tests.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBoxTest.cs, ListBoxItemTest.cs: Added or expanded some tests.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added some tests.

2007-06-27  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBoxItemTest.cs: Added or expanded some tests.

2007-06-27  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MeasureOrder test.

2007-06-27  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Expanded StarSizingMeasure test.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added StarSizingMeasure test.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added InItemsControlSimple.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBoxTest.cs, ListBoxItemTest.cs: Added.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Expanded MultipleColumnSpanStar test.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>
