@@ -1,6 +1,10 @@
+2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* ProgressBarTest.cs: Added IndicatorLenght test.
+
 2007-07-01  George Giolfan  <georgegiolfan@yahoo.com>
 
-	* TabControl.cs. TabItemTest.cs: Added or expanded some test.
+	* TabControlTest.cs, TabItemTest.cs: Added or expanded some test.
 
 2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>
 
